# HalideTutorial

./: README.md
HalideExample00/: CMakeLists.txt  main.cpp
HalideTutorial01/: CMakeLists.txt  main.cpp
HalideTutorial02/: CMakeLists.txt  main.cpp
HalideTutorial03/: CMakeLists.txt  main.cpp
HalideTutorial04/: CMakeLists.txt  main.cpp
HalideTutorial05/: CMakeLists.txt  main.cpp
HalideTutorial06/: CMakeLists.txt  main.cpp
HalideTutorial07/: CMakeLists.txt  main.cpp
HalideTutorial08/: CMakeLists.txt  main.cpp
